修复歌单保存封面